# elastic-face-recognition

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app-tier/: backend.py  face_recognition.py
core/: __init__.py  aws_clients.py  config.py  sqs_helpers.py
docs/: historical-autoscaling.md  historical-aws-results.md
docs/legacy/: aws_autoscaling_controller.py
scripts/: localstack_init.sh  smoke_test.py
tests/: test_helpers.py
web-tier/: server.py
